--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,18 @@
 
     <data>
         <variable
+            name="activity"
+            type="com.tyranotyrano.databindingtest.MainActivity" />
+
+        <variable
             name="user"
             type="com.tyranotyrano.databindingtest.vo.User" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textViewFirstName"
@@ -24,7 +29,14 @@
             android:layout_height="wrap_content"
             android:text="@{user.lastName}" />
 
-    </android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            android:onClick="@{activity::onButtonClick}"/>
+
+    </LinearLayout>
 
 </layout>
 
